k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speaking-character
  labels:
    app: speaking-character
spec:
  type: ClusterIP
  selector:
    app: speaking-character
  ports:
    - name: http
      port: 80
      targetPort: 3000
